# TodoWebApp

./: README.md  input.css  package.json  tailwind.config.js  tailwind.css
cpp/: CMakeLists.txt  config.json  manager.sh
cpp/include/: config.h  controllers.h  entities.h  initialize_db.h
cpp/src/: entities.cpp  initialize_db.cpp  main.cpp
cpp/src/controllers/: add_todo.cpp  get_todo.cpp  list_todo.cpp  remove_todo.cpp  update_todo.cpp
cpp/static/: tailwind.css
cpp/templates/: index.mustache  todos.mustache
rust/: .gitignore  Cargo.toml  config.json  migrate.sh
rust/migration/src/: m20220101_000001_create_table.rs
rust/src/: lib.rs  main.rs
rust/src/controllers/: mod.rs
rust/src/controllers/todo/: add_todo.rs  get_todo.rs  list_todos.rs  mod.rs  remove_todo.rs  update_todo.rs
rust/src/controllers/website/: index.rs  mod.rs
rust/src/entities/: mod.rs  prelude.rs  todo.rs
rust/templates/: index.html  nav.html  todos.html
