[package]
name = "todo-web-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "./migration" }

actix-web = "4.3.1"
actix-files = "0.6.2"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tera = "1.19.0"
thiserror = "1.0.45"
futures-util = "0.3.28"
actix-cors = "0.6.4"
